--- a/public/assets/css/demo/style.css
+++ b/public/assets/css/demo/style.css
@@ -34349,8 +34349,9 @@ select.form-control.border-danger-muted:focus {
 .auth-page .auth-left-wrapper {
     width: 100%;
     height: 100%;
-    background-image: url(../../images/carousel/img6.jpg);
-    background-size: cover
+    /*background-image: url(../../images/carousel/img6.jpg);
+    background-size: cover*/
+    background: #0154a0;
 }
 
 @media (min-width:992px) {
@@ -36291,4 +36292,47 @@ div.tagsinput span.tag a {
     grid-gap: 2em;
     align-items: center;
     justify-content: center;
+}
+.add-miembro{
+    text-align: center;
+}
+/* animation */
+
+#animation {
+    width: 100%;
+    height: 100%;
+}
+#animation svg {
+    overflow: visible;
+}
+#wheel {
+    animation-name: ckw;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    transform-origin: 50% 50%;
+}
+.svg__phone {
+    animation-name: phone;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    transform-origin: 50% 50%;
+}
+@keyframes ckw {
+    100% {
+        transform: rotate(360deg);
+   }
+}
+@keyframes phone {
+    0% {
+        -webkit-transform: translate3d(0, 0, 0);
+   }
+    50% {
+        -webkit-transform: translate3d(0, 30px, 0);
+   }
+    100% {
+        -webkit-transform: translate3d(0, 0px, 0);
+   }
 }
